tests/fixtures/semantics/invalid/switch_enum_missing_variant_no_else.ora
contract SemInvalidSwitchEnumMissingVariant {
    enum Status: u8 { Idle, Busy, Done }
    pub fn demo() {
        let s: Status = Status.Idle;
        // Invalid: missing Busy/Done and no else
        let v = switch (s) {
            Idle => 1,
        };
        _ = v;
    }
}


